RESOLVED FIXED267741
sfusd.edu: Trying to load SFUSD School Finder sometimes fails
https://bugs.webkit.org/show_bug.cgi?id=267741
Summary sfusd.edu: Trying to load SFUSD School Finder sometimes fails
Chris Dumez
Reported 2024-01-18 16:46:51 PST
Trying to load the following link often fails in Safari (and Firefox), works fine in Chrome: https://www.sfusd.edu/schools/enroll/discover/school-finder We see the following error in the JS console: ``` [Error] ReferenceError: Can't find variable: google (anonymous function) (js_h2tB6IRXjTJGY_6Kj6g8zvcS1bzOjvsppQOjs7XaUWs.js:12:176) ``` This is caused by the google maps script being marked as async while one of the sync script tries to access `window.google.maps`.
Attachments
Chris Dumez
Comment 1 2024-01-18 16:46:59 PST
Chris Dumez
Comment 2 2024-01-18 16:49:20 PST
EWS
Comment 3 2024-01-19 10:51:54 PST
Committed 273225@main (9c0f02f12a3c): <https://commits.webkit.org/273225@main> Reviewed commits have been landed. Closing PR #22950 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.