sfusd.edu: Trying to load SFUSD School Finder sometimes fails https://bugs.webkit.org/show_bug.cgi?id=267741 rdar://116292738

Reviewed by Brent Fulgham.

Trying to load the following link often fails in Safari (and Firefox), works fine in Chrome:
https://www.sfusd.edu/schools/enroll/discover/school-finder

We see the following error in the JS console:
```
[Error] ReferenceError: Can't find variable: google
	(anonymous function) (js_h2tB6IRXjTJGY_6Kj6g8zvcS1bzOjvsppQOjs7XaUWs.js:12:176)
```

This is caused by the google maps script being marked as async while one of the sync script
tries to access `window.google.maps`.

Add a quirk to ignore 'async' on scripts on sfusd.edu as a workaround while we reach out
to the site owners.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldBypassAsyncScriptDeferring const):

Canonical link: https://commits.webkit.org/273225@main